--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js "></script>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -21,19 +20,23 @@
 
     	<div class="wrap clearfix">
 
-	      <header>
-	        <h1>Simple &amp; Responsive Navigation</h1>
-	      </header>
-
-	      <div class="icon-menu"><span class="screen-reader-text">Menu</span>≡</div>
-
-	      <nav class="nav-primary clearfix">
+				<nav class="nav-primary clearfix">
 	      	<div class="icon-close" role="navigation"><span class="screen-reader-text">Menu</span>×</div>
 					<ul>
 						<li class="current-menu-item"><a href="#">Home</a></li>
-						<li><a href="#">Share</a></li>
+						<li class="menu-item-has-children"><a href="#">Share</a>
+							<ul class="sub-menu">
+								<li><a href="#">Learn More</a>
+									<ul class="sub-menu">
+										<li><a href="#">Sub Menu</a></li>
+										<li><a href="#">Sub Menu</a></li>
+										<li><a href="#">Sub Menu Menu</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
 						<li><a href="#">Find</a></li>
-						<li><a href="#">Info</a>
+						<li class="menu-item-has-children"><a href="#">Info</a>
 							<ul class="sub-menu">
 								<li><a href="#">About</a>
 									<ul class="sub-menu">
@@ -55,15 +58,30 @@
 						<li><a href="#">Contact</a></li>
 						<li><a href="#">Login</a></li>
 					</ul>
-				</nav><!-- .nav-primary -->
+				</nav>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<main class="content">
+
+		      <header>
+		        <h1>Simple &amp; Responsive Navigation</h1>
+		      </header>
+
+		      <div class="icon-menu"><span class="screen-reader-text">Menu</span>≡</div>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				</main>
 
 			</div>
 
 	    <footer>
 	      <p>Copyright &copy; Angela J. Holden</p>
 	    </footer>
-	    <script type="text/javascript">js/main.js</script>
+	    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js "></script>
+	    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
