--- a/home.html
+++ b/home.html
@@ -8,11 +8,9 @@
     <meta name="description" content="">
     <link rel='dns-prefetch' href='//fonts.googleapis.com'>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	  <script type="text/javascript" src="js/main.js"></script>
 
   </head>
     <body>
@@ -80,7 +78,5 @@
 	    <footer>
 	      <p>Copyright &copy; Angela J. Holden</p>
 	    </footer>
-	    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js "></script>
-	    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
