making some adjustments to the page and menu structure

--- a/home.html
+++ b/home.html
@@ -1,82 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Simple &amp; Responsive Navigation | Angela J. Holden</title>
-    <meta name="description" content="">
-    <link rel='dns-prefetch' href='//fonts.googleapis.com'>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	  <script type="text/javascript" src="js/main.js"></script>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Simple &amp; Responsive Navigation | Angela J. Holden</title>
+		<meta name="description" content="">
+		<link rel='dns-prefetch' href='//fonts.googleapis.com'>
+		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script type="text/javascript" src="js/main.js"></script>
 
-  </head>
-    <body>
+	</head>
+	<body>
 
-    	<div class="wrap clearfix">
-
-				<nav class="nav-primary clearfix">
-	      	<div class="icon-close" role="navigation"><span class="screen-reader-text">Menu</span>×</div>
-					<ul>
-						<li class="current-menu-item"><a href="#">Home</a></li>
-						<li class="menu-item-has-children"><a href="#">Share</a>
+		<nav class="nav-primary">
+			<div class="icon-menu"><span class="screen-reader-text">Menu</span>≡</div>
+			<div class="icon-close" role="navigation"><span class="screen-reader-text">Menu</span>×</div>
+				<ul>
+					<li class="current-menu-item"><a href="#">Home</a></li>
+					<li class="menu-item-has-children"><a href="#">Share</a>
+						<ul class="sub-menu">
+							<li><a href="#">Learn More</a>
+								<ul class="sub-menu">
+									<li><a href="#">Sub Menu</a></li>
+									<li><a href="#">Sub Menu</a></li>
+									<li><a href="#">Sub Menu Menu</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				<li><a href="#">Find</a></li>
+				<li class="menu-item-has-children"><a href="#">Info</a>
+					<ul class="sub-menu">
+						<li><a href="#">About</a>
 							<ul class="sub-menu">
-								<li><a href="#">Learn More</a>
-									<ul class="sub-menu">
-										<li><a href="#">Sub Menu</a></li>
-										<li><a href="#">Sub Menu</a></li>
-										<li><a href="#">Sub Menu Menu</a></li>
-									</ul>
-								</li>
+								<li><a href="#">Fly Out Menu</a></li>
+								<li><a href="#">Fly Out</a></li>
+								<li><a href="#">Fly Out Menu Menu</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Find</a></li>
-						<li class="menu-item-has-children"><a href="#">Info</a>
+						<li><a href="#">FAQ</a>
 							<ul class="sub-menu">
-								<li><a href="#">About</a>
-									<ul class="sub-menu">
-										<li><a href="#">Fly Out Menu</a></li>
-										<li><a href="#">Fly Out</a></li>
-										<li><a href="#">Fly Out Menu Menu</a></li>
-									</ul>
-								</li>
-								<li><a href="#">FAQ</a>
-									<ul class="sub-menu">
-										<li><a href="#">Fly Out Menu</a></li>
-										<li><a href="#">Fly Out</a></li>
-										<li><a href="#">Fly Out Menu Menu</a></li>
-									</ul>
-								</li>
+								<li><a href="#">Fly Out Menu</a></li>
+								<li><a href="#">Fly Out</a></li>
+								<li><a href="#">Fly Out Menu Menu</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Login</a></li>
 					</ul>
-				</nav>
+				</li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Login</a></li>
+			</ul>
+		</nav>
 
-				<main class="content">
+		<section class="wrap">
 
-		      <header>
-		        <h1>Simple &amp; Responsive Navigation</h1>
-		      </header>
+			<header>
+				<h1>Simple &amp; Responsive Navigation</h1>
+			</header>
 
-		      <div class="icon-menu"><span class="screen-reader-text">Menu</span>≡</div>
+			<main class="content">
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-				</main>
+			</main>
 
-			</div>
+		</section>
 
-	    <footer>
-	      <p>Copyright &copy; Angela J. Holden</p>
-	    </footer>
-  </body>
+		<footer>
+			<p>Copyright &copy; Angela J. Holden</p>
+		</footer>
+
+	</body>
 </html>
