--- a/home.html
+++ b/home.html
@@ -10,14 +10,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-			<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 
 	</head>
 	<body>
 
+		<div class="menu-open"><span class="screen-reader-text">Open Mobile Menu</span>≡</div>
 		<nav class="nav-primary">
-			<div class="icon-menu"><span class="screen-reader-text">Menu</span>≡</div>
-			<div class="icon-close" role="navigation"><span class="screen-reader-text">Menu</span>×</div>
+			<div class="menu-close"><span class="screen-reader-text">Close Mobile Menu</span>×</div>
 				<ul>
 					<li class="current-menu-item"><a href="#">Home</a></li>
 					<li class="menu-item-has-children"><a href="#">Share</a>
