--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Simple &amp; Responsive Navigation | Angela J. Holden</title>
+		<title>Angela J. Holden | Frontend Developer</title>
 		<meta name="description" content="">
 		<link rel='dns-prefetch' href='//fonts.googleapis.com'>
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
@@ -15,24 +15,27 @@
 	</head>
 	<body>
 
-		<div class="menu-open"><span class="screen-reader-text">Open Mobile Menu</span>≡</div>
+		<span class="screen-reader-text"><a href="#skip-nav">Skip Navigation</a></span>
+
+		<div aria-label="hidden" class="menu-open"><span class="menu-icon">≡</span></div>
+
 		<nav class="nav-primary">
-			<div class="menu-close"><span class="screen-reader-text">Close Mobile Menu</span>×</div>
-				<ul>
-					<li class="current-menu-item"><a href="#">Home</a></li>
-					<li class="menu-item-has-children"><a href="#">Share</a>
-						<ul class="sub-menu">
-							<li><a href="#">Learn More</a>
-								<ul class="sub-menu">
-									<li><a href="#">Sub Menu</a></li>
-									<li><a href="#">Sub Menu</a></li>
-									<li><a href="#">Sub Menu Menu</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-				<li><a href="#">Find</a></li>
-				<li class="menu-item-has-children"><a href="#">Info</a>
+			<div aria-label="hidden" class="menu-close"><span class="menu-icon">×</span></div>
+			<ul>
+				<li class="current-menu-item"><a href="#">Home</a></li>
+				<li class="menu-item-has-children"><a href="#">About</a>
+					<ul class="sub-menu">
+						<li><a href="#">Learn More</a>
+							<ul class="sub-menu">
+								<li><a href="#">Sub Menu</a></li>
+								<li><a href="#">Sub Menu</a></li>
+								<li><a href="#">Sub Menu Menu</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="#">Demos</a></li>
+				<li class="menu-item-has-children"><a href="#">Portfolio</a>
 					<ul class="sub-menu">
 						<li><a href="#">About</a>
 							<ul class="sub-menu">
@@ -50,19 +53,31 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Login</a></li>
+				<li><a href="#">Frontend</a></li>
+				<li><a href="#">Accessibility</a></li>
+				<li><a href="#">UI/UX</a></li>
 			</ul>
 		</nav>
 
-		<section class="wrap">
+		<section id="skip-nav" class="wrap">
 
 			<header>
-				<h1>Simple &amp; Responsive Navigation</h1>
+				<h1>Angela J. Holden</h1>
 			</header>
 
 			<main class="content">
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
