--- a/home.html
+++ b/home.html
@@ -22,47 +22,29 @@
 		<nav class="nav-primary">
 			<div aria-label="hidden" class="menu-close"><span class="menu-icon">×</span></div>
 			<ul>
-				<li class="current-menu-item"><a href="#">Home</a></li>
-				<li class="menu-item-has-children"><a href="#">About</a>
+				<li class="current"><a href="#">Angela J. Holden</a></li>
+				<li><a href="#">About</a>
 					<ul class="sub-menu">
-						<li><a href="#">Learn More</a>
-							<ul class="sub-menu">
-								<li><a href="#">Sub Menu</a></li>
-								<li><a href="#">Sub Menu</a></li>
-								<li><a href="#">Sub Menu Menu</a></li>
-							</ul>
-						</li>
+						<li><a href="#">Résumé</a></li>
+					</ul>
+				</li>
+				<li class="has-children"><a href="#">Skills</a>
+					<ul class="sub-menu">
+						<li><a href="#">UI/UX</a></li>
+						<li><a href="#">Frontend</a></li>
+						<li><a href="#">Accessibility</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Demos</a></li>
-				<li class="menu-item-has-children"><a href="#">Portfolio</a>
-					<ul class="sub-menu">
-						<li><a href="#">About</a>
-							<ul class="sub-menu">
-								<li><a href="#">Fly Out Menu</a></li>
-								<li><a href="#">Fly Out</a></li>
-								<li><a href="#">Fly Out Menu Menu</a></li>
-							</ul>
-						</li>
-						<li><a href="#">FAQ</a>
-							<ul class="sub-menu">
-								<li><a href="#">Fly Out Menu</a></li>
-								<li><a href="#">Fly Out</a></li>
-								<li><a href="#">Fly Out Menu Menu</a></li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#">Frontend</a></li>
-				<li><a href="#">Accessibility</a></li>
-				<li><a href="#">UI/UX</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 
 		<section id="skip-nav" class="wrap">
 
 			<header>
-				<h1>Angela J. Holden</h1>
+				<h1>Home</h1>
 			</header>
 
 			<main class="content">
